# dataflow-setup

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  MD diagram  PRODUCTION_IMPLEMENTATION_GUIDE.md  README.md  SECRETS_MANAGEMENT_GUIDE.md  current_flow.md  docker-compose.yml  env.example  model_dependency  production_guide.md  pyproject.toml  requirements.txt  target_flow.md
.cursor/commands/: draft-pr.md
.cursor/rules/: changelog.mdc  pull-requests.mdc
.dbt/: profiles.yml
.github/workflows/: build-and-push-ecr.yml  lint_on_push.yml  main.yml  test-cicd.yml
airflow/: Dockerfile  README.md  build-ecr.sh  init-airflow.sh  requirements.txt  setup-ecr.sh
airflow-local/: requirements.txt
airflow-local/dags/: full_main_pipeline.py
airflow-mwaa/: ARCHITECTURE.md  README_MWAA_DEPLOYMENT.md  config.env.example  deploy.sh
airflow-mwaa/dags/: dbt_main_pipeline_mwaa.py  dbt_production_pipeline.py  full_main_pipeline_mwaa.py
airflow-mwaa/requirements/: requirements.txt
airflow/dags/: dbt_main_pipeline.py  full_main_pipeline.py
aws/: AWS_SETUP_GUIDE.md  test_aws_connection.py
dataflow/dbt_usage/: __init__.py  dbt_test.py
dataflow/dbt_utils/: ARCHITECTURE.md  README.md  connector.py
dataflow/snowflake_usage/: __init__.py  snowflake_test.py
dataflow/snowflake_utils/: ARCHITECTURE.md  README.md  __init__.py  connector.py
dbt/models/ staging/: sources.yml  stg_customers.sql  stg_nation.sql  stg_orders.sql  stg_supplier.sql
dbt/models/example/: my_first_dbt_model.sql
dbt/models/intermidiate/: int_customers.sql  int_suppliers.sql
dbt_jobs/: __init__.py  main_pipeline.py
docs/: AIRFLOW-UI-ACCESS.md  DOCKER-COMPOSE.md  EC2-AIRFLOW-ECR-SETUP.md  ECR-COSTS-AND-ALTERNATIVES.md  PRODUCTION-GUIDE.md
snowflake_main/: snowflake_test_conn.py
snowflake_utils/: QUICKSTART.md  README.md  __init__.py  connector.py
